# Controle_de_estudo

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: study_data.json
src/: main.py
src/controle_estudos/: cli.py  core.py  storage.py
tests/: test_core.py
